[gd_scene load_steps=17 format=2]

[ext_resource path="res://UI/Fonts/mama-bear/Mama Bear Incease/Mama Bear Incease.otf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Menus/Options/Options.gd" type="Script" id=2]
[ext_resource path="res://UI/gameplay_theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/ParallaxBackground.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
use_filter = true
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=12]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 5 )
Button/styles/disabled = null
Button/styles/focus = SubResource( 6 )
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 9 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 10 )
Label/styles/normal = null
RichTextLabel/colors/default_color = Color( 1, 1, 1, 1 )
RichTextLabel/colors/font_color_selected = Color( 0.49, 0.49, 0.49, 1 )
RichTextLabel/colors/font_color_shadow = Color( 0, 0, 0, 0 )
RichTextLabel/colors/selection_color = Color( 0.1, 0.1, 1, 0.8 )
RichTextLabel/constants/line_separation = 1
RichTextLabel/constants/shadow_as_outline = 0
RichTextLabel/constants/shadow_offset_x = 1
RichTextLabel/constants/shadow_offset_y = 1
RichTextLabel/constants/table_hseparation = 3
RichTextLabel/constants/table_vseparation = 3
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = SubResource( 11 )
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = null

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -319.851, -62.4631 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 70.0
margin_bottom = 25.0
theme = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -200.0
margin_right = 175.0
margin_bottom = 200.0
rect_min_size = Vector2( 350, 400 )
color = Color( 0, 0, 0, 0.494118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -180.0
margin_right = 150.0
margin_bottom = 220.0
rect_min_size = Vector2( 300, 400 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 3 )
text = "Options"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 300.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 4 )
text = "Master Volume"
align = 1

[node name="MasterSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 115.0
margin_right = 300.0
margin_bottom = 131.0
min_value = -40.0
max_value = 0.0
value = -10.0

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 151.0
margin_right = 300.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 4 )
text = "Music"
align = 1

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 196.0
margin_right = 300.0
margin_bottom = 212.0
min_value = -40.0
max_value = 0.0
value = -10.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 232.0
margin_right = 300.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 4 )
text = "Sound Effects"
align = 1

[node name="SoundSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 277.0
margin_right = 300.0
margin_bottom = 293.0
min_value = -40.0
max_value = 0.0
value = -10.0
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 313.0
margin_right = 300.0
margin_bottom = 337.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_top = 2.0
margin_right = 186.0
margin_bottom = 22.0
theme = SubResource( 12 )
text = "Fullscreen"
__meta__ = {
"_editor_description_": ""
}

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 236.0
margin_right = 260.0
margin_bottom = 24.0
__meta__ = {
"_editor_description_": ""
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="Back" to="." method="_on_Button_pressed"]
[connection signal="value_changed" from="VBoxContainer/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
